objects/sf_devops__Vcs__c.object
<CustomObject>
    <description>Represents a supported version control system in the DevOps Center</description>
    <fields>
        <fullName>sf_devops__Base_URL__c</fullName>
        <label>Base URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf_devops__Named_Credential__c</fullName>
        <description>The developer name of the Named Credential to use for access to this version control system.</description>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Service_Provider__c</fullName>
        <description>The name of the VCS Provider for this VCS.</description>
        <label>Service Provider</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Source Control System</label>
    <listViews>
        <fullName>sf_devops__All</fullName>
        <columns>NAME</columns>
        <columns>sf_devops__Base_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vcs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Control Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf_devops__Base_Url_No_Change</fullName>
        <active>true</active>
        <description>Enforce the Base URL field cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(sf_devops__Base_URL__c)</errorConditionFormula>
        <errorMessage>The Base_Url__c of a VCS cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Service_Provider_No_Change</fullName>
        <active>true</active>
        <description>Enforce the Service Provider field cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(sf_devops__Service_Provider__c)</errorConditionFormula>
        <errorMessage>The Service_Provider__c of a VCS cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>